<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.example.jayharman.bluesquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_1950s"/>

            <RadioButton
                android:id="@+id/question_1_1890"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_1890s"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_1850s"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_2"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TableLayout
            android:id="@+id/checkboxTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <CheckBox
                    android:id="@+id/question_2_eu_folk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/question_2_eu_folk"/>

                <CheckBox
                    android:id="@+id/question_2_rock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/question_2_rock"/>

            </TableRow>

            <TableRow>

                <CheckBox
                    android:id="@+id/question_2_classical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/question_2_classical"/>

                <CheckBox
                    android:id="@+id/question_2_african"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/question_2_african"/>

            </TableRow>

        </TableLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <EditText
            android:id="@+id/question_3_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/question_3_hint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_4"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/question_4_european_immigrants"/>

            <RadioButton
                android:id="@+id/question_4_african_american_southerners"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/question_4_african_american_southerners"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/question_4_white_southerners"/>
        </RadioGroup>


        <Button
            android:id="@+id/eval_answers_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="evaluate"
            android:text="@string/check_my_answers"/>

    </LinearLayout>
</ScrollView>

